# kayrx-ui

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
src/components/: button.rs  file_drop_area.rs  file_upload.rs  label.rs  mod.rs  navbar.rs  pagination.rs  select.rs  toast.rs
src/components/input/: input_number.rs  input_text.rs
src/fabric/: mod.rs
src/fabric/state/: middleware.rs  mod.rs  reducer.rs  store.rs  subscription.rs
src/widget/: button.rs  file_drop_area.rs  file_upload.rs  label.rs  mod.rs  navbar.rs  pagination.rs  select.rs  toast.rs
src/widget/input/: input_number.rs  input_text.rs  mod.rs
