[package]
name = "kayrx-ui"
version = "0.1.0"
authors = ["krircc <krircc@qq.com>"]
documentation = "https://docs.rs/kayrx-ui/"
repository = "https://github.com/kayrx/kayrx-ui"
description = "The Kayrx-UI Framework"
categories = ["asynchronous", "webui-programming", "web-programming"]
keywords = ["async", "webui", "futures", "web", "wasm", "webassembly"]
license = "MIT"
readme = "README.md"
edition = "2018"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []

[dependencies]
yew = {version = "0.14", features = ["web_sys"]}
js-sys = "0.3"
log = "0.4"
wasm-bindgen = "0.2"
serde = { version = "1", features = ['derive'] }

[dependencies.web-sys]
version = "0.3"
features = [
    "Element",
    "Window",
    "Document",
    "Event",
    "CustomEvent",
    "DataTransfer",
    "DragEvent",
    "MouseEventInit",
]

[dev-dependencies]


[profile.release]
lto = true
opt-level = 3
codegen-units = 1